# fullstack-vite

./: package-lock.json  package.json  vercel.json
api/: main.py  pyproject.toml
app/: page.tsx
fastapi-with-poetry/: pyproject.toml
fastapi-with-poetry/fastapi_with_poetry/: main.py
my-vue-app/src/: AgentApp.tsx  App.tsx  CustomerApp.tsx  index.css
src/: App.jsx
todo-server/: .env  pyproject.toml
todo-server/app/: main.py
tutorial/backend/todo-app/: .env  pyproject.toml
tutorial/backend/todo-app/tests/: test_main.py
tutorial/backend/todo-app/todo_app/: main.py  setting.py
tutorial/frontend/: package-lock.json  package.json  types.d.ts
tutorial/frontend/src/actions/: action.ts
tutorial/frontend/src/app/: layout.tsx  page.tsx
tutorial/frontend/src/components/: AddTask.tsx  EditTask.tsx  SubmitButton.tsx  Task.tsx  TodoTable.tsx  ToolTip.tsx
tutorial/frontend/src/components/ui/: Modal.tsx
