[tool.poetry]
name = "fastapi-with-poetry"
version = "0.1.0"
description = ""
authors = ["Maaz Khan <mmaazkhan2107@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
