[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Mian Maaz Ullah Khan <mmaazkhan2107@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
